--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.10.1",
+    "react-zoom-pan-pinch": "^3.7.0",
     "roughjs": "^4.6.6",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.17"
