--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "livekit-server-sdk": "^2.15.0",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.2",
     "socket.io": "^4.8.1"
   }
 }
